# Scrobcord

./: .gitignore  DESIGN.md  README.md  TASKS.md  package-lock.json  package.json  tailwind.config.js
.github/: copilot-instructions.md
.github/workflows/: build.yml
scripts/: release.mjs
src/: App.tsx  index.css  main.tsx
src-tauri/: .env.example  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/commands/: auth.rs  discord.rs  history.rs  mod.rs  polling.rs  settings.rs  updater.rs
src-tauri/src/models/: mod.rs  settings.rs  status.rs  track.rs
src-tauri/src/services/: discord_rpc.rs  lastfm.rs  mod.rs  poller.rs
src/components/: ConnectionStatus.tsx  NowPlayingCard.tsx  ScrobbleHistory.tsx  TitleBar.tsx  UpdateBanner.tsx
src/components/settings/: DiscordSettings.tsx  GeneralSettings.tsx  LastfmSettings.tsx
src/components/ui/: badge.tsx  button.tsx  input.tsx  label.tsx  scroll-area.tsx  slider.tsx  switch.tsx
src/hooks/: useConnectionStatus.ts  useNowPlaying.ts  useScrobbleHistory.ts  useUpdateCheck.ts
src/i18n/: index.ts  types.d.ts
src/i18n/locales/: en.json  ja.json
src/lib/: tauriInvoke.ts  utils.ts
src/pages/: Dashboard.tsx  Settings.tsx
src/store/: appStore.ts
